--- a/LogindeG1/Web.config
+++ b/LogindeG1/Web.config
@@ -15,6 +15,6 @@
     </compilers>
   </system.codedom>
 	<connectionStrings>
-		<add name="conexion" connectionString="Data Source=LAPTOP-KB9GG2UT;initial catalog=UsuaLogin;integrated security=true" providerName="System.Data.SqlClient"/>
-	</connectionStrings>
+		<add name="conexionBD" connectionString="Data Source=LAPTOP-KB9GG2UT; initial catalog=grupo5;integrated security=true" providerName="System.Data.SqlClient"></add>
+			</connectionStrings>
 </configuration>
