--- a/LogindeG1/Web.config
+++ b/LogindeG1/Web.config
@@ -15,6 +15,6 @@
     </compilers>
   </system.codedom>
 	<connectionStrings>
-		<add name="conexionBD" connectionString="Data Source=LAPTOP-KB9GG2UT; initial catalog=grupo5;integrated security=true" providerName="System.Data.SqlClient"></add>
+		<add name="conexionBD" connectionString="Data Source=DESKTOP-GLJR0B3\MSSQLSERVER1; initial catalog=grupo5;integrated security=true" providerName="System.Data.SqlClient"></add>
 			</connectionStrings>
 </configuration>
