--- a/LogindeG1/Web.config
+++ b/LogindeG1/Web.config
@@ -19,9 +19,9 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="conexionBD" connectionString="Data Source=DESKTOP-GLJR0B3\MSSQLSERVER1; initial catalog=grupo5;integrated security=true"
+    <add name="conexionBD" connectionString="Data Source=LAPTOP-KB9GG2UT; initial catalog=grupo5;integrated security=true"
       providerName="System.Data.SqlClient" />
-    <add name="sistemaConnectionString" connectionString="Data Source=DESKTOP-GLJR0B3\MSSQLSERVER1;Initial Catalog=sistema;Integrated Security=True"
+    <add name="sistemaConnectionString" connectionString="Data Source=LAPTOP-KB9GG2UT;Initial Catalog=sistema;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
